Bugfix: la pagina non scrolla più al top quando si clicca su collapse

--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -37,7 +37,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#Nmap">
+                                                <a   data-toggle="collapse" href="#Nmap">
                                                     Nmap
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -46,7 +46,7 @@
                                                 <a href="https://www.stationx.net/nmap-cheat-sheet/" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#Nessus">
+                                                <a   data-toggle="collapse" href="#Nessus">
                                                     Nessus
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -55,7 +55,7 @@
                                                 <a href="" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#OpenVAS">
+                                                <a   data-toggle="collapse" href="#OpenVAS">
                                                     OpenVAS
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -80,7 +80,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#wapiti">
+                                                <a   data-toggle="collapse" href="#wapiti">
                                                     Wapiti
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -89,7 +89,7 @@
                                                 <a href="http://wapiti.sourceforge.net/" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#vega">
+                                                <a   data-toggle="collapse" href="#vega">
                                                     Vega
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -113,7 +113,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#droopescan">
+                                                <a   data-toggle="collapse" href="#droopescan">
                                                     Droope
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -122,13 +122,13 @@
                                                 <a href="https://github.com/The404Hacking/Infoga/blob/master/Screenshot.png" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse" href="#">
                                                     VEDI
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse" href="#">
                                                     VEDI
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -150,7 +150,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#dnsRecon">
+                                                <a   data-toggle="collapse" href="#dnsRecon">
                                                     Dnsrecon
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -159,13 +159,13 @@
                                                 <a href="https://github.com/darkoperator/dnsrecon" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a href="#" data-toggle="collapse"  >
                                                     VEDI
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse" href="#">
                                                     VEDI
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -187,13 +187,13 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#infoga"> Infoga <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                                <a   data-toggle="collapse" href="#infoga"> Infoga <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
                                                 <a href="https://github.com/m4ll0k/Infoga" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#infogae">Infoga Email  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                                <a   data-toggle="collapse" href="#infogae">Infoga Email  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
                                                 <a href="https://github.com/m4ll0k/Infoga" target="_blank">documentation</a>
@@ -215,7 +215,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse" href="#">
                                                     vedi
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -225,7 +225,7 @@
                                             </li>
                                             
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse" href="#">
                                                     vedi
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -250,7 +250,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#wifite"> Wifite <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                                <a   data-toggle="collapse" href="#wifite"> Wifite <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
                                                 <a href="" target="_blank">documentation</a>
@@ -282,7 +282,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#0" data-toggle="collapse" data-target="#apriNmap">
+                        <a data-toggle="collapse" href="#apriNmap">
                             <strong>
                                 NMAP SCAN
                             </strong>
@@ -505,7 +505,7 @@
 
             <div class="panel panel-sidebar">
                 <div class="panel-heading">
-                    <a href="#" data-toggle="collapse" data-target="#apriNessus">
+                    <a   data-toggle="collapse" href="#apriNessus">
                         <strong>
                             NESSUS SCAN
                         </strong>
@@ -564,7 +564,7 @@
             </div>
             <div class="panel panel-sidebar">
                 <div class="panel-heading">
-                    <a href="#" data-toggle="collapse" data-target="#apriOpenVAS">
+                    <a   data-toggle="collapse" href="#apriOpenVAS">
                         <strong>
                             OPENVAS SCAN
                         </strong>
@@ -611,7 +611,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#wapiti">
+                        <a   data-toggle="collapse" href="#wapiti">
                             <strong>
                                 WAPITI
                             </strong>
@@ -847,7 +847,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#droopescan">
+                        <a   data-toggle="collapse" href="#droopescan">
                             <strong>
                                 DROOPESCAN
                             </strong>
@@ -941,7 +941,7 @@
 
             <div class="panel panel-sidebar">
                 <div class="panel-heading">
-                    <a href="#" data-toggle="collapse" data-target="#vedi2">
+                    <a   data-toggle="collapse" href="#vedi2">
                         <strong>
                             vedi
                         </strong>
@@ -972,7 +972,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a data-toggle="collapse" data-target="#dnsRecon">
+                        <a data-toggle="collapse" href="#dnsRecon">
                             <strong>
                                 DNSRECON
                             </strong>
@@ -1095,7 +1095,7 @@
 
             <div class="panel panel-sidebar">
                 <div class="panel-heading">
-                    <a href="#" data-toggle="collapse" data-target="#vedi2">
+                    <a   data-toggle="collapse" href="#vedi2">
                         <strong>
                             vedi
                         </strong>
@@ -1125,7 +1125,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#infoga">
+                        <a   data-toggle="collapse" href="#infoga">
                             <strong>
                                 INFOGA
                             </strong>
@@ -1209,7 +1209,7 @@
              <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#infogae">
+                        <a   data-toggle="collapse" href="#infogae">
                             <strong>
                                 INFOGA E-MAIL
                             </strong>
@@ -1307,7 +1307,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#sqlmap">
+                        <a   data-toggle="collapse" href="#sqlmap">
                             <strong>
                                 SQLMAP
                             </strong>
@@ -1715,7 +1715,7 @@
              <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#">
+                        <a   data-toggle="collapse" href="#">
                             <strong>
                                 NoSql
                             </strong>
@@ -1813,7 +1813,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#wifite">
+                        <a data-toggle="collapse" href="#wifite">
                             <strong>
                                 WIFITE
                             </strong>
