--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -39,7 +39,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#Nmap">
+                                                <a   data-toggle="collapse"  href="#Nmap">
                                                     Nmap
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -48,7 +48,7 @@
                                                 <a href="https://www.stationx.net/nmap-cheat-sheet/" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#Nessus">
+                                                <a   data-toggle="collapse"  href="#Nessus">
                                                     Nessus
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -57,7 +57,7 @@
                                                 <a href="" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#OpenVAS">
+                                                <a   data-toggle="collapse"  href="#OpenVAS">
                                                     OpenVAS
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -82,7 +82,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#wapiti">
+                                                <a   data-toggle="collapse"  href="#wapiti">
                                                     Wapiti
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -91,7 +91,7 @@
                                                 <a href="http://wapiti.sourceforge.net/" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#vega">
+                                                <a   data-toggle="collapse"  href="#vega">
                                                     Vega
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -115,7 +115,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#droopescan">
+                                                <a   data-toggle="collapse"  href="#droopescan">
                                                     Droope
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -124,13 +124,13 @@
                                                 <a href="https://github.com/The404Hacking/Infoga/blob/master/Screenshot.png" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse"  href="#">
                                                     VEDI
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse"  href="#">
                                                     VEDI
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -152,7 +152,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#dnsRecon">
+                                                <a   data-toggle="collapse"  href="#dnsRecon">
                                                     Dnsrecon
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -161,13 +161,13 @@
                                                 <a href="https://github.com/darkoperator/dnsrecon" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse"  href="#">
                                                     VEDI
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse"  href="#">
                                                     VEDI
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -189,13 +189,13 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#infoga"> Infoga <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                                <a   data-toggle="collapse"  href="#infoga"> Infoga <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
                                                 <a href="https://github.com/m4ll0k/Infoga" target="_blank">documentation</a>
                                             </li>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#infogae">Infoga Email  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                                <a   data-toggle="collapse"  href="#infogae">Infoga Email  <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
                                                 <a href="https://github.com/m4ll0k/Infoga" target="_blank">documentation</a>
@@ -217,7 +217,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse"  href="#">
                                                     vedi
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -227,7 +227,7 @@
                                             </li>
                                             
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#">
+                                                <a   data-toggle="collapse"  href="#">
                                                     vedi
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
@@ -252,7 +252,7 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
 
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#wifite"> Wifite <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
+                                                <a   data-toggle="collapse"  href="#wifite"> Wifite <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <li>
                                                 <a href="" target="_blank">documentation</a>
@@ -284,7 +284,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#Nmap">
+                        <a   data-toggle="collapse"  href="#Nmap">
                             <strong>
                                 MODULO NMAP
                             </strong>
@@ -334,7 +334,7 @@
             <div class="col-5">
                     <div class="panel panel-sidebar">
                         <div class="panel-heading">
-                            <a href="#" data-toggle="collapse" data-target="#Nessus">
+                            <a   data-toggle="collapse"  href="#Nessus">
                                 <strong>
                                     MODULO NESSUS
                                 </strong>
@@ -385,7 +385,7 @@
                 <div class="col-5">
                         <div class="panel panel-sidebar">
                             <div class="panel-heading">
-                                <a href="#" data-toggle="collapse" data-target="#OpenVAS">
+                                <a   data-toggle="collapse"  href="#OpenVAS">
                                     <strong>
                                         MODULO OPENVAS
                                     </strong>
@@ -465,7 +465,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#wapiti">
+                        <a   data-toggle="collapse"  href="#wapiti">
                             <strong>
                                  WAPITI
                             </strong>
@@ -526,7 +526,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#droopescan">
+                        <a   data-toggle="collapse"  href="#droopescan">
                             <strong>
                                  DROOPE
                             </strong>
@@ -586,7 +586,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#dnsRecon">
+                        <a   data-toggle="collapse"  href="#dnsRecon">
                             <strong>
                                  DNSRECON
                             </strong>
@@ -646,7 +646,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#infoga">
+                        <a   data-toggle="collapse"  href="#infoga">
                             <strong>
                                  INFOGA
                             </strong>
@@ -696,7 +696,7 @@
              <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#infogae">
+                        <a   data-toggle="collapse"  href="#infogae">
                             <strong>
                                  INFOGA EMAIL
                             </strong>
@@ -757,7 +757,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#sqlmap">
+                        <a   data-toggle="collapse"  href="#sqlmap">
                             <strong>
                                  SQL
                             </strong>
@@ -807,7 +807,7 @@
              <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#">
+                        <a   data-toggle="collapse"  href="#">
                             <strong>
                                  NO SQL
                             </strong>
@@ -868,7 +868,7 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#wifite">
+                        <a   data-toggle="collapse"  href="#wifite">
                             <strong>
                                  WIFITE
                             </strong>
