--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -29,7 +29,7 @@
                  
                 <div class="panel panel-default">
                     <div class="panel-heading">
-					<a href="#" data-toggle="collapse" data-target="#Nmap">Nmap</a><br>
+					<a   data-toggle="collapse"  href="#Nmap">Nmap</a><br>
                     </div>
                     <div class="collapse" id="Nmap">
                      <div class="panel-body ">
@@ -84,7 +84,7 @@
     
 					<div class="panel panel-default">
                     <div class="panel-heading">
-					<a href="#" data-toggle="collapse" data-target="#Nessus">Nessus</a><br>
+					<a   data-toggle="collapse"  href="#Nessus">Nessus</a><br>
                     </div>
                     <div class="collapse" id="Nessus">
                      <div class="panel-body ">
@@ -137,7 +137,7 @@
                       </div>
                       <div class="panel panel-default">
                     <div class="panel-heading">
-					<a href="#" data-toggle="collapse" data-target="#OpenVAS">OpenVAS</a><br>
+					<a   data-toggle="collapse"  href="#OpenVAS">OpenVAS</a><br>
                     </div>
                     <div class="collapse" id="OpenVAS">
                      <div class="panel-body ">
@@ -189,7 +189,7 @@
                       </div>
                      <div class="panel panel-default">
                     <div class="panel-heading">
-					<a href="#" data-toggle="collapse" data-target="#DNSRECON">DnsRecon</a><br>
+					<a   data-toggle="collapse"  href="#DNSRECON">DnsRecon</a><br>
                     </div>
                     <div class="collapse" id="DNSRECON">
                      <div class="panel-body ">
@@ -242,7 +242,7 @@
                       </div>
                       <div class="panel panel-default">
                     <div class="panel-heading">
-					<a href="#" data-toggle="collapse" data-target="#DROOPE">Droope</a><br>
+					<a   data-toggle="collapse"  href="#DROOPE">Droope</a><br>
                     </div>
                     <div class="collapse" id="DROOPE">
                      <div class="panel-body ">
@@ -295,7 +295,7 @@
                       </div>
                       <div class="panel panel-default">
                     <div class="panel-heading">
-					<a href="#" data-toggle="collapse" data-target="#INFOGA">Infoga</a><br>
+					<a   data-toggle="collapse"  href="#INFOGA">Infoga</a><br>
                     </div>
                     <div class="collapse" id="INFOGA">
                      <div class="panel-body ">
@@ -348,7 +348,7 @@
                       </div>
                         <div class="panel panel-default">
                     <div class="panel-heading">
-					<a href="#" data-toggle="collapse" data-target="#INFOGAEMAIL">Infoga Email</a><br>
+					<a   data-toggle="collapse"  href="#INFOGAEMAIL">Infoga Email</a><br>
                     </div>
                     <div class="collapse" id="INFOGAEMAIL">
                      <div class="panel-body ">
